# python_vnc_client

./: .gitignore  README.md  TestBed.ipynb  sample.py  setup.cfg
python_vnc/: pydes.py  vnc.py
python_vnc_client/: vnc.py
