[metadata]
name = python_vnc_client
url = https://github.com/masamitsu-murase/python_vnc_client
version = 0.1
license = BSD
license_file = LICENSE
description = A simple VNC client written in pure python
author = masamitsu-murase
keywords =
  vnc
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Web Environment
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = false
install_requires =

[bdist_wheel]
python-tag = py3

[coverage:run]
branch = True
include = python_vnc_client/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
omit =
    .*
